[package]
name = "benthic"
version = "0.1.0"
edition = "2021"

[[example]]
name = "order_execution"
path = "examples/order_execution.rs"

[dependencies]
criterion = "0.5.1"
intrusive-collections = "0.9.7"
itertools = "0.14.0"
rand = "0.9.1"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.1"
chrono = "0.4.40"

#[[bench]]
#name = "order_execution"
#harness = false

[[bench]]
name = "simple"
harness = false